<resources>
    <string name="app_name">Green Coffee</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_guest">Login as guest</string>
    <string name="free_shipping_free_turn">Free shipping. Free return.</string>
    <string name="login_social_fail">Login fail</string>
    <string name="sign_into_green_copy">Sign into Green Coffee</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="change_password">Change password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="reset">Reset</string>
    <string name="search_every_thing">Search everything on Spring</string>
    <string name="input_empty" formatted="false">Not be empty %s</string>
    <string name="phone_number_label">Phone number:</string>
    <string name="password_label">Password:</string>
    <string name="password_invalid">Password is invalid</string>
    <string name="email_invalid">Mail is invalid</string>
    <string name="active_account">Active Account</string>
    <string name="password_change_success">Your change password request was successfully, please check your email now.</string>
    <string name="login_cancel">Login cancel</string>
    <string name="join_green_coffee">Join Green Coffee</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password_condition">Password must contain at least 6 charracters</string>
    <string name="reset_password_message">To reset your password, please enter the email address you registered</string>
    <string name="reset_password">Reset password</string>
    <string name="welcome">Welcome</string>
    <string name="guest">Guest</string>
    <string name="action_settings">Settings</string>
    <string name="member_since_x" formatted="false">Member Since %s</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="guest_message">You must login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alerts">Alerts</string>
    <string name="shop_all">Shop All</string>
    <string name="add_a_new_card">Add a New Card</string>
    <string name="sold_out">Sold Out</string>
    <string name="sale_off">Sale off</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="take_sale_off_your_first_app_purchase">Take %s off your first app purchase</string>
    <string name="end_sale_time">Ends %s</string>
    <string name="most_popular">Most popular</string>
    <string name="on_sale">On Sale</string>
    <string name="browse_by_category">Browse by category</string>
    <string name="shop_now">Shop now</string>
    <string name="detail_map">Detail</string>
    <string name="adv_map">Advice</string>
    <string name="temperature_label">Temperature:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="amount_of_rain_label">Amount of rain:</string>
    <string name="soil_label">Soil:</string>
    <string name="fertility_label">Fertility:</string>
    <string name="close">Close</string>
    <string name="title_activity_price">Price</string>
    <string name="province_price">Province/Commune</string>
    <string name="change_info_price">Change</string>
    <string name="organisation">Organisation</string>
    <string name="average_price">Price(VND/kg)</string>
    <string name="unit_price">Unit</string>
    <string name="coffee_price">Coffee price:</string>
    <!-- notification-->
    <string name="wrong_format_date">Wrong format date</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="province">Province</string>
    <string name="update">Update</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update_profile_success">Update profile success</string>
    <!-- ////////////////////////////////////////////////////////////////////////////////////////-->
    <!-- Menu-->
    <string name="what_do_you_want_see">What do you want to see on green coffee?</string>
    <string name="weather_info">Weather info</string>
    <string name="price">Market price</string>
    <string name="buy">Buy demand</string>
    <string name="sale">Sale demand</string>
    <string name="exchange_trans">Exchange Transaction</string>
    <string name="profile">Profile</string>
    <string name="news">GAP</string>
    <string name="question_and_answer">Question and answer</string>
    <string name="pest_and_disease">Pest and disease</string>
    <string name="total_quality">Total quality:</string>
    <string name="sold">Sold:</string>
    <string name="type_coffee">Type Coffee:</string>
    <string name="location">Location:</string>
    <string name="unit_vnd_kg">VND/kg</string>
    <string name="price_">Price:</string>
    <string name="question_label">Question:</string>
    <string name="time_label">Time:</string>
    <string name="answer_label">Answer:</string>
    <string name="image_label">Image:</string>
    <string name="province_label">Province:</string>
    <string name="select_or_take_picture">Select or take a new Picture</string>
    <string name="choose_location">Choose location</string>
    <string name="ton">ton</string>
    <string name="up_question">Up question</string>
    <string name="require_location">Input location</string>
    <string name="require_type_float">Data Type Float</string>
    <string name="require_type_integer">Data Type Integer</string>
    <string name="require_price">Input price</string>
    <string name="require_question">Input question</string>
    <string name="require_total_quantity">Input total quantity</string>
    <!-- tab name-->
    <string name="sale_tab_name">Sale demand</string>
    <string name="sale_trans_tab_name">Transaction</string>
    <string name="buy_tab_name">Buy demand</string>
    <string name="buy_trans_tab_name">Transaction</string>
    <string name="data_not_enough">Data not enough</string>
    <string name="un_named_road">Unnamed Road</string>
    <string name="date">Date</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="coffee_graph_title" formatted="false">Coffee price at %s from %s to %s</string>
    <string name="do_c" formatted="false">%s°C</string>
    <string name="do_" formatted="false">%s°</string>
    <string name="do_c_label">°C</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="gps_setting_title">GPS is settings</string>
    <string name="gps_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="cancel">Cancel</string>
    <string name="language_label">Language:</string>
    <string name="address_label">Address:</string>
    <string name="full_name_label">Full Name:</string>
    <string name="sex_label">Sex:</string>
    <string name="searching">Search...</string>
    <string name="search">Search</string>
    <string name="title_temperature_graph" formatted="false">Temperature of %s from %s to %s</string>
    <string name="title_rain_graph" formatted="false">Rain of %s from %s to %s</string>
    <string name="policy_and_terms">Policy and terms</string>
    <string name="skip">Skip</string>
    <string name="over_current_date">Over current date</string>
    <string name="soil_fertility">Soil fertility</string>
    <string name="wind_speed_label">Wind speed:</string>
    <string name="wind_direction_label">Wind direction:</string>
    <string name="search_not_found">Search not found</string>
    <string-array name="date_of_week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="month_of_year">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>

        <item>Dec</item>
    </string-array>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="new_password_label">New password:</string>
    <string name="old_password_label">Old password:</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old password</string>
    <string name="type">Type</string>
    <string name="company">Qouted by</string>
    <string name="function_developing">Function is developing</string>
    <string name="green_coffee_update">Green Coffee update</string>
    <string name="next">Continue</string>

</resources>
