<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/price_title_low"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/price_title"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/province_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="25"
        android:padding="10dp"
        android:text="@string/province"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="25"
        android:padding="@dimen/p10dp"
        android:text="@string/type"/>

    <TextView
        android:id="@+id/price_average"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="30"
        android:padding="@dimen/p10dp"
        android:text="@string/average_price"/>

    <TextView
        android:id="@+id/company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20"
        android:padding="@dimen/p10dp"
        android:text="@string/company"/>

</LinearLayout>