<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/p5dp"
                    android:text="@string/total_quality"/>

                <EditText
                    android:id="@+id/tvTotalQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/p5dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/p5dp"
                    android:text="@string/ton"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d8dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/p5dp"
                    android:text="@string/type_coffee"/>

                <Spinner
                    android:id="@+id/type_coffee_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:dropDownWidth="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d8dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/p5dp"
                    android:text="@string/location"/>

                <TextView
                    android:id="@+id/tvLocationExchange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/p5dp"
                    android:text="@string/choose_location"/>

                <ImageView
                    android:id="@+id/imgLocationExchange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_location_on_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/p5dp"
                    android:text="@string/price_"/>

                <EditText
                    android:id="@+id/tvPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="@dimen/p5dp"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/p5dp"
                    android:text="@string/unit_vnd_kg"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="@dimen/p250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/p40dp"
                android:background="@drawable/btn_base_light"
                android:text="@string/buy"
                android:textAllCaps="true"
                android:textColor="@color/black_75"
                android:textSize="@dimen/s14sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"/>

</RelativeLayout>
