<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/llToolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llToolbar"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="@dimen/p10dp"
                    android:text="@string/phone_number_label"/>

                <EditText
                    android:id="@+id/edtPhoneNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawablePadding="@dimen/p10dp"
                    android:imeOptions="actionNext"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="@dimen/p10dp"
                    android:text="@string/password_label"/>

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawablePadding="@dimen/p10dp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/p10dp"
                android:background="@drawable/bg_base_selector_transperent"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/black_40"
                android:textSize="@dimen/s16sp"
                />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="@dimen/p200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_base_light"
                android:text="@string/sign_into_green_copy"
                android:textAllCaps="true"
                android:textColor="@color/black_75"
                android:textSize="@dimen/s14sp"/>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="@dimen/p200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/p20dp"
                android:background="@drawable/btn_base_light"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/black_75"
                android:textSize="@dimen/s14sp"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/p50dp"
        android:layout_height="@dimen/p50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_progressbar"
        android:indeterminate="true"
        android:visibility="gone"/>
</RelativeLayout>
