<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/p10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/p10dp"
            android:layout_marginTop="@dimen/p10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/p10dp"
                android:text="@string/question_label"
                android:textSize="@dimen/s15sp"/>

            <EditText
                android:id="@+id/edtQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/white"
                android:drawablePadding="@dimen/p10dp"
                android:gravity="top|left"
                android:lines="5"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/p10dp"
                android:padding="@dimen/p3dp"
                android:text="@string/image_label"/>

            <ImageView
                android:id="@+id/image_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_a_photo_black_48dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnUpQuestion"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/p25dp"
            android:background="@drawable/btn_base_light"
            android:text="@string/up_question"
            android:textAllCaps="true"
            android:textColor="@color/black_75"
            android:textSize="@dimen/s14sp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/p50dp"
        android:layout_height="@dimen/p50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_progressbar"
        android:indeterminate="true"
        android:visibility="gone"/>

</RelativeLayout>
